--- a/app/Makefile
+++ b/app/Makefile
@@ -97,6 +97,10 @@ endif
 
 APP_LOAD_PARAMS = --appFlags 0x200 --delete $(COMMON_LOAD_PARAMS) --path $(APPPATH)
 
+# Ledger: add the "Pending security review" disclaimer
+APP_LOAD_PARAMS += --tlvraw 9F:01
+DEFINES += HAVE_PENDING_REVIEW_SCREEN
+
 ifeq ($(TARGET_NAME),TARGET_NANOS)
 APP_STACK_SIZE:=3216
 ICONNAME:=$(CURDIR)/nanos_icon.gif
