--- a/app/Makefile
+++ b/app/Makefile
@@ -87,7 +87,6 @@ APPPATH = "44'/1003'" --path "44'/354'"
 else
 define error_message
 
-
 COIN value not supported: [$(COIN)]
 
 
@@ -96,6 +95,9 @@ $(error "$(error_message)")
 endif
 
 APP_LOAD_PARAMS = --curve ed25519 $(COMMON_LOAD_PARAMS) --path $(APPPATH)
+
+APP_LOAD_PARAMS += --tlvraw 9F:01
+DEFINES += HAVE_PENDING_REVIEW_SCREEN
 
 ifeq ($(TARGET_NAME),TARGET_NANOS)
 APP_LOAD_PARAMS += --appFlags 0x000
